--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
       </div>`;
 
     try {
-      const res = await fetch("http://localhost:3000/api/analyze", {
+      const res = await fetch("http://writeryte-backend.onrender.com/api/analyze", {
         method: "POST",
         headers: {
           "Content-Type": "application/json"
