--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
           <h1 class="text-2xl font-bold text-indigo-600 dark:text-indigo-400">WriteRyte AI</h1>
         </a>
       </div>
+      <div class="flex items-center space-x-3">
+        <a href="/Manual/index.html" class="button">
+          <h1 class="text-2xl font-bold text-indigo-600 dark:text-indigo-400">User Manual</h1>
+        </a>
+      </div>
     </div>
   </header>
 
