added external link to the user manual

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         </a>
       </div>
       <div class="flex items-center space-x-3">
-        <a href="/Manual/index.html" class="button">
+        <a href="https://user-manual-orpin.vercel.app/" target="_blank" class="button">
           <h1 class="text-2xl font-bold text-indigo-600 dark:text-indigo-400">User Manual</h1>
         </a>
       </div>
